Added sort, update and save to file functionality

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/afs/kth.se/home/tmp/1020/tmp-sda-1160/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\Mukesh\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
