--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ build.xml
 manifest.mf
 /nbproject/
 /.DS_Store/
+/ToDoListProject/nbproject/private/
+/ToDoList-Project/nbproject/private/
+/ToDoList-Project/dist/
+/ToDoList-Project/build/
