--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ manifest.mf
 /.DS_Store/
 /ToDoList-Project/nbproject/
 /ToDoListProject/nbproject/private/
-/ToDoList-Project/nbproject/private/
 /ToDoList-Project/dist/
 /ToDoList-Project/build/
+/ToDoListProject/nbproject/project.xml
+/ToDoListProject/nbproject/project.properties
+/ToDoListProject/nbproject/build-impl.xml
+/ToDoListProject/nbproject/genfiles.properties
